# ManaScope

./: .gitignore  AGENTS.md  AI_POLICY.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
src/manascope/: __init__.py  analyze.py  cli.py  collection.py  deck.py  display.py  edhrec.py  review.py  scryfall.py
tests/: test_cli.py  test_collection.py  test_deck.py  test_display.py  test_edhrec.py  test_review_redos.py  test_scryfall.py
